Changed index.html one more time

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 		<title> Nurdo pushka </title>
 	</head>
 	<body>
-		<h1> Ne pravda </h1>
-		<h2>pravda</h2>
+		<h1>Ne pravda </h1>
+		<h2>Pravda</h2>
 		<h3>Ne pravda </h3>
+		<h4>Pravda</h4>
+		<h5>Ne pravda</h5>
+		<h6>Pravda</h6>
 	</body>
 </html>
