--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
-<html>
-	<head>
-		<title> Nurdo pushka </title>
-	</head>
-	<body>
-		<h1>Ne pravda </h1>
-		<h2>Pravda</h2>
-		<h3>Ne pravda </h3>
-		<h4>Pravda</h4>
-		<h5>Ne pravda</h5>
-		<h6>Pravda</h6>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Yryskeldi Anarbekov</title>
+</head>
+<body>
+	<header class="header">
+		<div class="header__top">
+			<div class="container">
+				<a href="#">+82-10-6447-0828</a>
+				<a href="#">yryskeldi.anarbekov@stonybrook.edu</a>
+				<a href="#">Some other link</a>
+			</div>
+		</div>
+		<div class="header_content">
+			<div class="header__logo">
+				<a href="#">
+					<img src="img/logo.png" alt="">
+				</a>
+			</div>
+			<nav class="menu">
+				<ul>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+</body>
 </html>
